# C-school-project

./: .gitignore  BasicSolver.cpp  BasicSolver.h  CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  Solver.cpp  Solver.h  StrassenSolver.cpp  StrassenSolver.h  main.cpp  matice-1.txt  matice-2.txt  matice-3.txt
